[gd_scene load_steps=8 format=3 uid="uid://kgxfpyn5babi"]

[ext_resource type="Script" path="res://ui/title/TitleScreen.gd" id="1_qg5et"]
[ext_resource type="Texture2D" uid="uid://0hjwbn8vd8d8" path="res://art/title-bg.png" id="2_hpsih"]
[ext_resource type="Texture2D" uid="uid://bg05mj2fh6kqd" path="res://art/title-screen-icon.png" id="3_7gfmp"]
[ext_resource type="FontFile" uid="uid://c1vwfyoxivvfi" path="res://art/joystix monospace.otf" id="4_vjvgs"]
[ext_resource type="AudioStream" uid="uid://ctx2g00s4s13n" path="res://audio/title_theme.mp3" id="5_nl5xg"]
[ext_resource type="PackedScene" uid="uid://b8k2a8iadvhan" path="res://transition/TransitionManager.tscn" id="6_rgg4q"]
[ext_resource type="PackedScene" uid="uid://px6a2dg8cawb" path="res://addons/modular-settings-menu/scenes/settings.tscn" id="7_ixy1o"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qg5et")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hpsih")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfmp")
expand_mode = 5

[node name="ResumeGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.882353)
theme_override_fonts/font = ExtResource("4_vjvgs")
theme_override_font_sizes/font_size = 16
text = "Resume Game"

[node name="NewGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.882353)
theme_override_fonts/font = ExtResource("4_vjvgs")
theme_override_font_sizes/font_size = 16
text = "New Game"

[node name="SettingsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="ExitGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nl5xg")
volume_db = -4.0
autoplay = true
bus = &"Music"

[node name="TransitionManager" parent="." instance=ExtResource("6_rgg4q")]
layout_mode = 1

[node name="SettingsScene" parent="." instance=ExtResource("7_ixy1o")]
visible = false
layout_mode = 1
anchors_preset = -1
